packages/beff-core/tests/snapshots/print_parser__tests__ok_array_decoder.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "decoder(r#\"\n        export type Alias = string[];\n        parse.buildParsers<{ Dec: Alias }>();\n      \"#)"
snapshot_kind: text
---
function ValidateAlias(ctx, input) {
    return (hoisted_Alias_1.validateArrayValidator.bind(hoisted_Alias_1))(ctx, input);
}
function ParseAlias(ctx, input) {
    return (hoisted_Alias_2.parseArrayParser.bind(hoisted_Alias_2))(ctx, input);
}
function ReportAlias(ctx, input) {
    return (hoisted_Alias_3.reportArrayReporter.bind(hoisted_Alias_3))(ctx, input);
}
function SchemaAlias(ctx, input) {
    if (ctx.seen["Alias"]) {
        throw new Error("Failed to print schema. At Alias: circular reference in schema");
    }
    ctx.seen["Alias"] = true;
    var tmp = (hoisted_Alias_4.schemaArraySchema.bind(hoisted_Alias_4))(ctx);
    delete ctx.seen["Alias"];
    return tmp;
}
const validators = {
    Alias: ValidateAlias
};
const parsers = {
    Alias: ParseAlias
};
const reporters = {
    Alias: ReportAlias
};
const schemas = {
    Alias: SchemaAlias
};
const hoisted_Alias_0 = validateString;
const hoisted_Alias_1 = new ArrayValidator(hoisted_Alias_0);
const hoisted_Alias_2 = new ArrayParser(parseIdentity);
const hoisted_Alias_3 = new ArrayReporter(hoisted_Alias_0, reportString);
const hoisted_Alias_4 = new ArraySchema(schemaString);
