packages/beff-core/tests/snapshots/print_parser__tests__ok_array_spread.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        const Arr1 = [\"a\", \"b\"] as const\n        const Arr2 = [...Arr1, \"c\"] as const\n\n        type Arr2C = typeof Arr2[number];\n\n        parse.buildParsers<{ Arr2C: Arr2C }>();\n      \"#)"
---
type Arr2C = "a" | "b" | "c";
type Arr2C = Arr2C;

