packages/beff-core/tests/snapshots/print_parser__tests__ok_array_spread_declare.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        declare const Arr1 = [\"a\", \"b\"] as const\n        declare const Arr2 = [...Arr1, \"c\"] as const\n\n        type Arr2C = typeof Arr2[number];\n\n        parse.buildParsers<{ Arr2C: Arr2C }>();\n      \"#)"
---
type Arr2C = ("a" | "b" | "c");


type BuiltParsers = {
  Arr2C: Arr2C,
}
