packages/beff-core/tests/snapshots/print_parser__tests__ok_codec_decoder.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "decoder(r#\"\n        export type Alias = Date\n        parse.buildParsers<{ Dec: Alias }>();\n      \"#)"
---
const hoistedIndirect = [];
const namedRuntypes = {
    "Alias": new DateRuntype()
};
const buildParsersInput = {
    "Dec": new RefRuntype("Alias")
};
