packages/beff-core/tests/snapshots/print_parser__tests__ok_exclude.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        type A = \"a\" | \"b\";\n\n        type B = \"b\" | \"c\";\n\n        type X = Exclude<A, B>;\n\n        parse.buildParsers<{ X: X }>();\n      \"#)"
---
--- entry.ts ---
type A = "a" | "b";

type B = "b" | "c";

type X = Exclude<A, B>;

parse.buildParsers<{ X: X }>();
--------------------------------
type A = ("a" | "b");

type B = ("b" | "c");

type X = "a";


type BuiltParsers = {
  X: X,
}
