packages/beff-core/tests/snapshots/print_parser__tests__ok_exclude2.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        type Shape =\n        | { kind: \"circle\"; radius: number }\n        | { kind: \"square\"; x: number }\n        | { kind: \"triangle\"; x: number; y: number };\n       \n        type T3 = Exclude<Shape, { kind: \"circle\" }>\n        parse.buildParsers<{ T3: T3 }>();\n      \"#)"
---
type Shape = { "kind": "circle"; "radius": number } | {
  "kind": "square";
  "x": number;
} | { "kind": "triangle"; "x": number; "y": number };
type T3 =
  | ({ "kind": "circle"; "radius": number } & Not<{ "kind": "circle" }>)
  | (
    & (
      | ({ "kind": "square"; "x": number } & Not<{ "kind": "circle" }>)
      | (
        & (
          & { "kind": "triangle"; "x": number; "y": number }
          & Not<{ "kind": "circle" }>
        )
        & Not<{ "kind": "square"; "x": number }>
      )
    )
    & Not<{ "kind": "circle"; "radius": number }>
  );
type T3 = T3;

