packages/beff-core/tests/snapshots/print_parser__tests__ok_interface_extends.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n\n        interface User {\n            name: string,\n            age: number,\n        }\n        interface Admin extends User {\n            role: string,\n        }\n        parse.buildParsers<{ Admin: Admin }>();\n      \"#)"
---
type Admin = ({ "role": string } & User);

type User = { "age": number, "name": string };


type BuiltParsers = {
  Admin: Admin,
}
