packages/beff-core/tests/snapshots/print_parser__tests__ok_intersection_decoder.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "decoder(r#\"\n        export type Alias = {a:string} & {b:number}\n        parse.buildParsers<{ Dec: Alias }>();\n      \"#)"
---
const namedParsers = {
    "Alias": new ParserObjectImpl({
        "a": new ParserTypeOfImpl("string"),
        "b": new ParserTypeOfImpl("number")
    }, null)
};
const buildValidatorsInput = {
    "Dec": new ParserRefImpl("Alias")
};
